--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "react-fast-compare": "^2.0.2"
   },
   "peerDependencies": {
