--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "cross-env ES_MODULES=true babel src -d lib",
+    "build": "babel src -d lib",
+    "watch": "node watch.js",
     "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -30,7 +31,8 @@
     "@types/react": "^16.4.18",
     "apollo-client": "^2.4.4",
     "apollo-link": "^1.2.3",
-    "cross-env": "^5.2.0",
+    "babel-core": "^6.26.3",
+    "colors": "^1.3.2",
     "eslint-config-orionsoft": "^1.3.0",
     "graphql": "^14.0.2",
     "typescript": "^3.1.3"
