--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "apollo-hooks",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "Hooks for Apollo",
-  "main": "index.js",
+  "main": "./lib",
   "repository": "https://github.com/nicolaslopezj/apollo-hooks",
   "author": "nicolaslopezj",
   "license": "MIT",
