--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "apollo-hooks",
   "version": "4.1.3",
   "description": "Hooks for Apollo",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "types": "./dist/index.d.ts",
   "files": [
-    "/lib"
+    "dist"
   ],
+  "main": "./dist/apollo-hooks.umd.js",
+  "module": "./dist/apollo-hooks.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/apollo-hooks.es.js",
+      "require": "./dist/apollo-hooks.umd.js"
+    }
+  },
   "repository": "https://github.com/nicolaslopezj/apollo-hooks",
   "author": "nicolaslopezj",
   "license": "MIT",
@@ -14,9 +21,10 @@
   "scripts": {
     "test": "exit 0",
     "prepare": "yarn run build",
-    "clean": "rm -rf ./lib",
-    "build": "yarn run clean && tsc",
-    "watch": "tsc -w"
+    "clean": "rm -rf ./dist",
+    "dev": "vite",
+    "build": "vite build && yarn emit-types",
+    "emit-types": "tsc --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist"
   },
   "dependencies": {
     "lodash": "^4.17.21",
@@ -36,6 +44,7 @@
     "eslint-config-orionsoft": "^2.2.0",
     "graphql": "^16.1.0",
     "react": "^17.0.2",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "vite": "^2.9.9"
   }
 }
