--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
+    "object-hash": "3.0.0",
     "react-fast-compare": "^3.2.0"
   },
   "peerDependencies": {
@@ -35,16 +36,17 @@
     "react": "^16.7.0"
   },
   "devDependencies": {
-    "@apollo/client": "^3.5.6",
+    "@apollo/client": "^3.6.5",
     "@types/graphql": "^14.5.0",
-    "@types/lodash": "^4.14.178",
-    "@types/react": "^17.0.37",
+    "@types/lodash": "^4.14.182",
+    "@types/object-hash": "^2.2.1",
+    "@types/react": "^18.0.9",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
     "eslint-config-orionsoft": "^2.2.0",
-    "graphql": "^16.1.0",
+    "graphql": "^16.5.0",
     "react": "^17.0.2",
-    "typescript": "^4.5.4",
+    "typescript": "^4.7.2",
     "vite": "^2.9.9"
   }
 }
