--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apollo-hooks",
   "version": "5.0.2",
   "description": "Hooks for Apollo",
-  "types": "./dist/apollo-hooks.d.ts",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
