--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-hooks",
-  "version": "5.0.3",
+  "version": "5.0.4",
   "description": "Hooks for Apollo",
   "types": "./dist/index.d.ts",
   "files": [
@@ -33,6 +33,7 @@
   },
   "peerDependencies": {
     "@apollo/client": "*",
+    "graphql": "^16.5.0",
     "react": "^16.7.0"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "eslint-config-orionsoft": "^2.2.0",
     "graphql": "^16.5.0",
     "react": "^17.0.2",
+    "rollup-plugin-visualizer": "^5.6.0",
     "typescript": "^4.7.2",
     "vite": "^2.9.9"
   }
