--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "exit 0",
     "prepare": "yarn run build",
     "clean": "rm -rf ./dist",
-    "dev": "vite",
+    "dev": "watch -p './src/**/*.ts' -c 'yarn build'",
     "build": "vite build && yarn emit-types",
     "emit-types": "tsc"
   },
@@ -49,6 +49,7 @@
     "react": "^17.0.2",
     "rollup-plugin-visualizer": "^5.6.0",
     "typescript": "^4.7.2",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "watch-cli": "^0.2.3"
   }
 }
