--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "peerDependencies": {
     "@apollo/client": "*",
-    "graphql": "^16.5.0",
-    "react": "^16.7.0"
+    "graphql": "*",
+    "react": "*"
   },
   "devDependencies": {
     "@apollo/client": "^3.6.5",
