--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "apollo-hooks",
-  "version": "7.1.3",
+  "version": "7.2.1",
   "description": "Hooks for Apollo",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/src/index.d.ts",
   "files": [
     "dist"
   ],
+  "type": "module",
   "main": "./dist/apollo-hooks.umd.js",
   "module": "./dist/apollo-hooks.es.js",
   "exports": {
@@ -37,15 +38,15 @@
     "react": "*"
   },
   "devDependencies": {
-    "@apollo/client": "^3.9.11",
+    "@apollo/client": "^3.10.8",
+    "@biomejs/biome": "^1.8.3",
     "@types/graphql": "^14.5.0",
-    "@types/lodash": "^4.17.0",
-    "@types/react": "^18.2.79",
-    "graphql": "^16.8.1",
-    "react": "^18.2.0",
-    "rollup-plugin-visualizer": "^5.12.0",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.9",
+    "@types/lodash": "^4.17.7",
+    "@types/react": "^18.3.3",
+    "graphql": "^16.9.0",
+    "react": "^18.3.1",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.4",
     "watch-cli": "^0.2.3"
   }
 }
