--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-hooks",
-  "version": "7.2.1",
+  "version": "7.2.2",
   "description": "Hooks for Apollo",
   "types": "./dist/src/index.d.ts",
   "files": [
@@ -47,6 +47,7 @@
     "react": "^18.3.1",
     "typescript": "^5.5.3",
     "vite": "^5.3.4",
+    "vite-plugin-dts": "^3.9.1",
     "watch-cli": "^0.2.3"
   }
 }
