--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-hooks",
-  "version": "7.2.3",
+  "version": "7.2.4",
   "description": "Hooks for Apollo",
   "types": "./dist/index.d.ts",
   "files": [
@@ -12,7 +12,8 @@
   "exports": {
     ".": {
       "import": "./dist/apollo-hooks.es.js",
-      "require": "./dist/apollo-hooks.umd.js"
+      "require": "./dist/apollo-hooks.umd.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "repository": "https://github.com/nicolaslopezj/apollo-hooks",
