Update dependencies and improve TypeScript types in useQuery and useUpdateQuery hooks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "skipLibCheck": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "removeComments": true,
+    "removeComments": false,
     "sourceMap": false,
     "declaration": true,
     "declarationMap": false,
